--- a/my_11_circle.html
+++ b/my_11_circle.html
@@ -14,6 +14,7 @@
     <h5 class="subHeading" id="teams">india vs srilanka</h5>
     <h5 class="subHeading">scorecard</h5>
     <div class="scorecard">
+      <img class="img" src="./static/asset/pngwing.com.png" alt="image">
       <table class="scorecardtable">
         <thead class="tableHeader">
           <th class="tableHeading">batsman</th>
@@ -25,6 +26,7 @@
         </thead>
         <tbody id="tableBody"></tbody>
       </table>
+      <img class="img" src="./static/asset/pngwing.com.png" alt="image">
     </div>
   </div>
   <script type="text/javascript" src="./static/index.js"></script>
